<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgsun"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-10dp">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:queryHint="Search Here"
        android:iconifiedByDefault="false"
        android:background="@drawable/searachviewshape"
        android:searchIcon="@drawable/searchview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cityname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="15dp"
        android:fontFamily="@font/merriweathersansmedium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/location_icon"
        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/merriweathersansbold"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sun"
        app:layout_constraintTop_toBottomOf="@+id/cityname" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sun"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityname"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun_animation" />



    <TextView
        android:id="@+id/teampature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersansbold"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sun"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersansregular"
        android:text="@string/sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sun" />

    <TextView
        android:id="@+id/mix_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersansregular"
        android:text="@string/maximumTemperature"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersansregular"
        android:text="@string/minimumTemperature"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/mix_temp"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/mix_temp"
        app:layout_constraintTop_toBottomOf="@+id/mix_temp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersansbold"
        android:text="@string/day"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/min_temp"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/min_temp"
        app:layout_constraintTop_toBottomOf="@+id/min_temp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersansregular"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="324dp"
        android:layout_height="200dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/backgroundshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="352dp"
            android:layout_height="210dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="314dp"
                android:layout_height="202dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sunset"
                    android:contentDescription="@string/sunsetPic" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/SunRiseUpdate"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/conduction"
                    android:contentDescription="@string/conductionPic"/>

                <TextView
                    android:id="@+id/conduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/weatherUpdate"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/weatherName"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/humidity"
                    android:contentDescription="@string/humidityPic"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/humidityUpdate"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/humidityName"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sea"
                    android:contentDescription="@string/seaPic"/>

                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/seaUpdate"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/seaName"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/windspeed"
                    android:contentDescription="@string/windspeedPic"/>

                <TextView
                    android:id="@+id/windspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/windspeeddUpdate"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/windspeedName"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sunrise"
                    android:contentDescription="@string/sunsetPic"/>

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/SunRiseUpdate"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersansmedium"
                    android:gravity="center"
                    android:text="@string/SunRiseName"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
